--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -24,7 +24,7 @@ body {
     background: var(--color-bg-body);
 }
 
-form {
+.formUser {
     /* From https://css.glass */
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
@@ -66,4 +66,22 @@ input[type=submit] {
     background: var(--color-input);
     border-bottom: 2px solid var(--color-input);
     cursor: pointer;
+}
+
+textarea {
+    resize: none;
+}
+
+.dashContainer {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 25% 25% 25% 25% ;
+    grid-template-areas: "dashMenu form form form";
+}
+
+.formCreate {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: auto;
+    grid-template-areas: "input button";
 }
