--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -85,3 +85,10 @@ textarea {
     grid-template-rows: auto;
     grid-template-areas: "input button";
 }
+
+.taskContainer {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: auto;
+    grid-template-areas: "description buttons";
+}
